--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,19 @@ body, html {
 }
 
 input[type="text"] {
-  font-size: 1.6em;
+  font-size: 1.4em;
 }
 
 .text-center {
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
 #text-tag {
-  margin-top: 30px;
+  margin-top: 2em;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.75);
   padding: 20px;
@@ -34,9 +38,17 @@ input[type="text"] {
 }
 
 #copy-btn {
-  margin-top: 15px;
+  border-color: white;
+  color: white;
+  margin-top: 2em;
+}
+
+#copy-btn:hover, #copy-btn:focus, #copy-btn:active {
+  background-color: white;
+  color: #0072ff;
 }
 
 #noti {
-  color: white;
+  margin-top: .3em;
+  color: #eee;
 }
